Fix first post's title alignment

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -146,7 +146,6 @@ a:link{
   position: relative;
   background-position: center;
   background-size: cover;
-
 }
 
 /*image overlay effect*/
@@ -188,7 +187,7 @@ a:link{
   font-size: 4.5em;
 }
 
-/*styling for most popular thumbnails */ 
+/*styling for most popular thumbnails */
 .overlay .overlay-content.small {
   font-size: 1.5em;
   color: lighten(grey, 70%);
@@ -200,4 +199,8 @@ a:link{
 
 .post-author {
   margin: 0;
+}
+
+.post-first {
+  width: 100%;
 }
